name:                localhackday-project-fall2015
version:             0.0.0.1
synopsis:            Project built at MLH Localhackday
description:         Please see README.md
homepage:            http://github.com/aweinstock314/localhackday-project-fall2015#readme
license:             BSD3
license-file:        LICENSE
author:              Avi Weinstock
--maintainer:          example@example.com
copyright:           2015 Avi weinstock
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable localhackday-project-fall2015-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , localhackday-project-fall2015
  default-language:    Haskell2010

--test-suite localhackday-project-fall2015-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , localhackday-project-fall2015
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/localhackday-project-fall2015
